fix list header controls spacing

--- a/src/app/file-browser/components/file-list-controls/file-list-controls.component.scss
+++ b/src/app/file-browser/components/file-list-controls/file-list-controls.component.scss
@@ -21,6 +21,8 @@
 
   font-size: $font-size-sm;
 
+  padding-right: 2 * $grid-unit;
+
   > * {
     font-weight: 600;
     position: relative;
